padthv1 - An old-school additive polyphonic synthesizer
-------------------------------------------------------

ChangeLog


GIT HEAD

- Early fixing to build for Qt >= 5.15.0.


0.9.13  2020-03-26  A Spring'20 Release.

- Maximum pitch-bend range has been expanded to 0..400%,
  allegedly to support some PME driven instruments (as
  proposed by sacarlson, to synthv1).
- Make man page compression reproducible (after request
  by Jelle van der Waa, thanks).
- Fixed crash when showing the tooltip of a negative note
  number that results from dragging over and beyond the
  left edge of the virtual piano keyboard.
- Remove -v (verbose) flag from 'strip' post-link command.
- Fixed CMake build by adding missing Custom Color Theme
  (palette) form file (.ui).
- Bumped copyright headers into the New Year (2020).


0.9.12  2019-12-26  The Winter'19 Release.

- Custom color (palette) theme editor introduced; color
  (palette) theme changes are now effective immediately,
  except on default.
- Second attempt to fix the yet non-official though
  CMake build configuration.
- Move QApplication construction/destruction from LV2 UI
  to plug-in instantiation and cleanup.


0.9.11  2019-10-31  A Halloween'19 Release.

- When using autotools and ./configure --with-qt=...,
  it is also necessary to adjust the PKG_CONFIG_PATH
  environment variable (after a merge request by plcl
  aka. Pedro López-Cabanillas, while on qmidinet).
- Upstream packaging is now split to JACK standalone and
  LV2 plugin only: the former shared common core and UI 
  package is now duplicated but statically linked though.


0.9.10  2019-09-24  An Early-Fall'19 Release.

- Upstream packaging is now split on JACK standalone,
  LV2 plugin and common core and UI packages, similar
  to recent Debian practice.
- Added alternate yet non-official CMake build option.
- Fix HiDPI display screen effective support (Qt >= 5.6).
- All randomizers now compliant to the standard normal
  distribution.